// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmissionsScreen renders correctly 1`] = `
<RCTScrollView
  ListFooterComponent={[Function]}
  data={
    [
      {
        "data": [
          {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "md-boat",
            "id": "4",
            "onPress": [Function],
            "periodType": "monthly",
            "times": 1,
            "title": "Boat",
            "value": 100,
            "weekDays": [],
          },
        ],
        "title": "Recurring emissions",
      },
      {
        "data": [
          {
            "co2value": 20,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "md-nutrition",
            "id": "2",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Beans",
            "value": 10,
          },
          {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "md-boat",
            "id": "3",
            "isMitigated": true,
            "onPress": [Function],
            "title": "Boat",
            "value": 100,
          },
        ],
        "date": "2020-03-01T00:00:00+00:00",
      },
      {
        "data": [
          {
            "co2value": 60,
            "creationDate": "2020-01-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "md-nutrition",
            "id": "1",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Beans",
            "value": 30,
          },
        ],
        "date": "2020-01-01T00:00:00+00:00",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    [
      0,
      3,
      7,
    ]
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        title="Recurring emissions"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <EmissionListItem
        co2value={0.0803}
        emissionModelType="boat"
        iconName="md-boat"
        id="4"
        onPress={[Function]}
        title="Boat"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        date="2020-03-01T00:00:00+00:00"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <EmissionListItem
        co2value={20}
        emissionModelType="beans"
        iconName="md-nutrition"
        id="2"
        isMitigated={false}
        onPress={[Function]}
        title="Beans"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <EmissionListItem
        co2value={0.0803}
        emissionModelType="boat"
        iconName="md-boat"
        id="3"
        isMitigated={true}
        onPress={[Function]}
        title="Boat"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        date="2020-01-01T00:00:00+00:00"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <EmissionListItem
        co2value={60}
        emissionModelType="beans"
        iconName="md-nutrition"
        id="1"
        isMitigated={false}
        onPress={[Function]}
        title="Beans"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          {
            "height": 100,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`EmissionsScreen renders correctly if no emissions 1`] = `
<RCTScrollView
  ListFooterComponent={[Function]}
  data={
    [
      {
        "data": [],
        "title": null,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    [
      0,
    ]
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        title={null}
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          {
            "height": 100,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`EmissionsScreen renders correctly if only normal emissions 1`] = `
<RCTScrollView
  ListFooterComponent={[Function]}
  data={
    [
      {
        "data": [
          {
            "co2value": 20,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "md-nutrition",
            "id": "2",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Beans",
            "value": 10,
          },
          {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "md-boat",
            "id": "3",
            "isMitigated": true,
            "onPress": [Function],
            "title": "Boat",
            "value": 100,
          },
        ],
        "date": "2020-03-01T00:00:00+00:00",
      },
      {
        "data": [
          {
            "co2value": 60,
            "creationDate": "2020-01-01T12:08:16.623Z",
            "emissionModelType": "beans",
            "emissionType": "food",
            "iconName": "md-nutrition",
            "id": "1",
            "isMitigated": false,
            "onPress": [Function],
            "title": "Beans",
            "value": 30,
          },
        ],
        "date": "2020-01-01T00:00:00+00:00",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    [
      0,
      4,
    ]
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        date="2020-03-01T00:00:00+00:00"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <EmissionListItem
        co2value={20}
        emissionModelType="beans"
        iconName="md-nutrition"
        id="2"
        isMitigated={false}
        onPress={[Function]}
        title="Beans"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <EmissionListItem
        co2value={0.0803}
        emissionModelType="boat"
        iconName="md-boat"
        id="3"
        isMitigated={true}
        onPress={[Function]}
        title="Boat"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        date="2020-01-01T00:00:00+00:00"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <EmissionListItem
        co2value={60}
        emissionModelType="beans"
        iconName="md-nutrition"
        id="1"
        isMitigated={false}
        onPress={[Function]}
        title="Beans"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          {
            "height": 100,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`EmissionsScreen renders correctly if only recurring emissions 1`] = `
<RCTScrollView
  ListFooterComponent={[Function]}
  data={
    [
      {
        "data": [
          {
            "co2value": 0.0803,
            "creationDate": "2020-03-01T12:08:16.623Z",
            "emissionModelType": "boat",
            "emissionType": "transport",
            "iconName": "md-boat",
            "id": "4",
            "onPress": [Function],
            "periodType": "monthly",
            "times": 1,
            "title": "Boat",
            "value": 100,
            "weekDays": [],
          },
        ],
        "title": "Recurring emissions",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={
    [
      0,
    ]
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <SectionHeader
        title="Recurring emissions"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <EmissionListItem
        co2value={0.0803}
        emissionModelType="boat"
        iconName="md-boat"
        id="4"
        onPress={[Function]}
        title="Boat"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          {
            "height": 100,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;
